--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,73 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact-moi</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Contacter-moi</title>
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body>
-  <h1>Voici comment me contater</h1>
 
-  <a href="index.html">Revenir a l'accueil</a>
+<body>
+  <nav>
+    <a href="index.html" class="nav-icon" aria-label="visit homepage" aria-current="page">
+      <img src="assets/image/logo1.png" alt="logo">
+      <span></span>
+    </a>
+    <div class="main-navlinks">
+      <button class="hamburger" type="button" aria-label="Toggle navigation" aria-expanded="false">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="navlinks-container">
+        <a href="index.html">Accueil</a>
+        <a href="painting.html">Œuvres originales</a>
+        <a href="actu.html">Actu</a>
+        <a href="contact.html">Contact</a>
+      </div>
+    </div>
+  </nav>
+  <div class="card-contact">
+    <div class="contact">
+      <h1>Vous êtes intéressé par un tableau ?<br>Contactez-moi</h1>
+      <ul class="list-inline">
+        <li class="list-inline-item"></li><a href="mailto:duquesne.peintre@gmail.com"><i class="fa-light fa-envelope"></i></a>
+        <p>duquesne.peintre@gmail.com</p></li>
+        <li class="list-inline-item"></li><a href="tel:+33610488231"></a><i class="bi bi-telephone"></i></a>
+        <p>+33 6 10 48 82 31</p></li>
+        <div class="social"><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i
+              class="icon ion-social-facebook"></i>
+            <p>DUQUESNE-ARTISTE-PEINTRE</p>
+          </a></div>
+        <li class="list-inline-item"></li><a href="#"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer-basic">
+    <footer>
+      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a
+          href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="index.html">Accueil</a></li>
+        <li class="list-inline-item"><a href="painting.html">Œuvres originales</a></li>
+        <li class="list-inline-item"><a href="actu.html">Actu</a></li>
+        <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+      </ul>
+      <p class="copyright">Copyright 2023 Christine Dusquesne - <a
+          href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
+    </footer>
+  </div>
+
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/scripts.js"></script>
 </body>
+
 </html>
