logo & page contact

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artiste peintre</title>
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="asset/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="asset/css/styles.css">
 </head>
 
 <body>
   <nav>
     <a href="index.html" class="nav-icon" aria-label="visit homepage" aria-current="page">
-      <img src="assets/image/logo1.png" alt="logo">
+      <img src="asset/image/logoN.png" alt="logo">
       <span></span>
     </a>
     <div class="main-navlinks">
@@ -42,7 +42,7 @@
   <div class="container">
     <section class="about">
       <div class="main">
-        <img src="../assets/image/profile C-D.jpg">
+        <img src="../asset/image/profile C-D.jpg">
         <div class="about-text">
           <p>Christine DUQUESNE est artiste peintre autodidacte.
             À travers sa peinture transparait ses thèmes de prédilection tels que la NATURE,
@@ -92,34 +92,36 @@
     <h3>Nouvelles œuvres originales</h3>
     <div class="container">
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/time.jpg" class="acceuil-img" alt="...">
+        <img src="asset/image/time.jpg" class="acceuil-img" alt="...">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Baby guitare.jpg" class="acceuil-img" alt="...">
+        <img src="asset/image/Baby guitare.jpg" class="acceuil-img" alt="...">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Ouvrir l'oeil.jpg" class="acceuil-img" alt="...">
+        <img src="asset/image/Ouvrir l'oeil.jpg" class="acceuil-img" alt="...">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Non mais dites!.jpg" class="acceuil-img" alt="...">
+        <img src="asset/image/Non mais dites!.jpg" class="acceuil-img" alt="...">
       </div>
     </div>
   </section>
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
+      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a
+          href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
         <li class="list-inline-item"><a href="painting.html">Œuvres originales</a></li>
         <li class="list-inline-item"><a href="actu.html">Actu</a></li>
         <li class="list-inline-item"><a href="contact.html">Contact</a></li>
       </ul>
-      <p class="copyright">Copyright 2023 Christine Dusquesne - <a href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
+      <p class="copyright">Copyright 2023 Christine Dusquesne - <a
+          href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
     </footer>
   </div>
 
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/scripts.js"></script>
+  <script src="asset/js/bootstrap.bundle.min.js"></script>
+  <script src="asset/js/scripts.js"></script>
 </body>
 
 </html>
