--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacter-moi</title>
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="asset/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="asset/css/styles.css">
 </head>
 
 <body>
   <nav>
     <a href="index.html" class="nav-icon" aria-label="visit homepage" aria-current="page">
-      <img src="assets/image/logo1.png" alt="logo">
+      <img src="asset/image/logoN.png" alt="logo">
       <span></span>
     </a>
     <div class="main-navlinks">
@@ -34,23 +34,49 @@
       </div>
     </div>
   </nav>
-  <div class="card-contact">
-    <div class="contact">
-      <h1>Vous êtes intéressé par un tableau ?<br>Contactez-moi</h1>
-      <ul class="list-inline">
-        <li class="list-inline-item"></li><a href="mailto:duquesne.peintre@gmail.com"><i class="fa-light fa-envelope"></i></a>
-        <p>duquesne.peintre@gmail.com</p></li>
-        <li class="list-inline-item"></li><a href="tel:+33610488231"></a><i class="bi bi-telephone"></i></a>
-        <p>+33 6 10 48 82 31</p></li>
-        <div class="social"><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i
-              class="icon ion-social-facebook"></i>
-            <p>DUQUESNE-ARTISTE-PEINTRE</p>
-          </a></div>
-        <li class="list-inline-item"></li><a href="#"><i class="fab fa-instagram"></i></a></li>
-      </ul>
+
+  <div class="container1">
+    <h1>Vous êtes intéressé par un tableau ?<br>Contactez-moi</h1>
+    <div class="container">
+      <div class="container">
+        <div class="card-contact">
+          <i class="fas fa-envelope"></i>
+          <h6>E-MAIL</h6>
+          <a href="mailto:duquesne.peintre@gmail.com" class="contact">duquesne.peintre@gmail.com</a>
+        </div>
+        <div class="card-contact">
+          <i class="fa-solid fa-mobile-screen-button"></i>
+          <h6>NUMERO DE TELEPHONE</h6>
+          <a href="tel:+33610488231" class="contact">+336 10 48 82 31</a>
+        </div>
+        <div class="card-contact">
+          <i class="fa-brands fa-facebook"></i>
+          <h6>FACEBOOK</h6>
+          <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">DUQUESNE-ARTISTE-PEINTRE</a>
+        </div>
+        <div class="card-contact">
+          <i class="fa-brands fa-instagram"></i>
+          <h6>INSTAGRAM</h6>
+          <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">DUQUESNE-ARTISTE-PEINTRE</a>
+        </div>
+      </div>
+      <div class="formulaire">
+        <form action="https://formsubmit.co/mehdislr@hotmail.fr" method="POST">
+          <input type="hidden" name="_subject" value="Nouveau mail!">
+          <label for="name">NOM:</label>
+          <input type="text" name="name" id="name" required>
+          <label for="email">Email:</label>
+          <input type="email" name="email" id="email" required>
+          <input type="hidden" name="_next" value="https://duquesne-artiste-peintre.netlify.app/index.html">
+          <label for="subject">Sujet:</label>
+          <input type="text" name="subject" id="subject" required>
+          <label for="message">Message</label>
+          <textarea name="message" cols="20" rows="5"></textarea>
+          <input type="submit" value="submit" class="btn">
+        </form>
+      </div>
     </div>
   </div>
-
   <div class="footer-basic">
     <footer>
       <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a
@@ -66,8 +92,8 @@
     </footer>
   </div>
 
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/scripts.js"></script>
+  <script src="asset/js/bootstrap.bundle.min.js"></script>
+  <script src="asset/js/scripts.js"></script>
 </body>
 
 </html>
