--- a/painting.html
+++ b/painting.html
@@ -6,18 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tableau</title>
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="asset/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="asset/css/styles.css">
 </head>
 
 <body>
   <nav>
     <a href="index.html" class="nav-icon" aria-label="visit homepage" aria-current="page">
-      <img src="assets/image/logo1.png" alt="logo">
+      <img src="asset/image/logoN.png" alt="logo">
       <span></span>
     </a>
     <div class="main-navlinks">
@@ -37,7 +37,7 @@
   <h1>Œuvres originales</h1>
   <div class="container">
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Arturo.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Arturo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Arturo</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -46,14 +46,14 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/L'ARCHE DE NOAH.png" class="card-img-top" alt="...">
+      <img src="asset/image/L'ARCHE DE NOAH.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">L'arche de Noah</h5>
         <p class="card-price">VENDU</p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Au dessus de tout.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Au dessus de tout.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Au dessus de tout</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Dinos.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Dinos.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Dinos</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -71,14 +71,14 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/DOS DE MER.png" class="card-img-top" alt="...">
+      <img src="asset/image/DOS DE MER.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Dos de mer</h5>
         <p class="card-price">VENDU</p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Regrets.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Regrets.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Regrets</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Flowers.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Flowers.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Flowers</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -96,14 +96,14 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/L'ORIGINE.png" class="card-img-top" alt="...">
+      <img src="asset/image/L'ORIGINE.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">L'origine</h5>
         <p class="card-price">VENDU</p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Unis vers.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Unis vers.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Unis vers</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -112,7 +112,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Ouvrir l'oeil.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Ouvrir l'oeil.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ouvrir l'oeil</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -121,14 +121,14 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/FRUITS.png" class="card-img-top" alt="...">
+      <img src="asset/image/FRUITS.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Fruits</h5>
         <p class="card-price">VENDU</p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/time.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/time.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Time</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -137,7 +137,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/le chemin.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/le chemin.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">le chemin</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -146,7 +146,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/La grotte.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/La grotte.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">La grotte</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -155,7 +155,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Lotus.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Lotus.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Lotus</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -164,7 +164,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Love.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Love.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Love</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -173,7 +173,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Non mais dites!.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Non mais dites!.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Non mais dites!</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -182,7 +182,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Les portes.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Les portes.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Les portes</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -191,7 +191,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/La poule.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/La poule.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">La poule</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -200,7 +200,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Le sein.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Le sein.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Le sein</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -209,14 +209,14 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Jmo.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Jmo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Jmo</h5>
         <p class="card-price">VENDU</p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Graciée.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Graciée.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Graciée</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -225,7 +225,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Eclats.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Eclats.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Eclats</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -234,7 +234,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Sidney.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/Sidney.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Sidney</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -243,7 +243,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/La boite.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/La boite.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">La boite</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -252,7 +252,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/COLISÉE.jpg" class="card-img-top" alt="...">
+      <img src="asset/image/COLISÉE.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Colisée</h5>
         <p class="card-price">VENDU</p>
@@ -275,8 +275,8 @@
     </footer>
   </div>
 
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/scripts.js"></script>
+  <script src="asset/js/bootstrap.bundle.min.js"></script>
+  <script src="asset/js/scripts.js"></script>
 </body>
 
 </html>
