--- a/thankyou.html
+++ b/thankyou.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Actualiter</title>
-  <link rel="stylesheet" href="asset/css/bootstrap.min.css">
+  <title>Contacter-moi</title>
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="asset/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
   <nav>
     <a href="index.html" class="nav-icon" aria-label="visit homepage" aria-current="page">
-      <img src="asset/image/logoN.png" alt="logo">
+      <img src="assets/image/logoN.png" alt="logo">
       <span></span>
     </a>
     <div class="main-navlinks">
@@ -32,25 +34,26 @@
       </div>
     </div>
   </nav>
-  <h1>Exposition</h1>
-	<div class="container center">
-		<embed src="asset/pdf/FLYER EXPO BOCAGE.pdf" width="450px" height="680px">
-	</div>
+  
+  <h1>Merci!</h1>
 
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
+      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a
+          href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
         <li class="list-inline-item"><a href="painting.html">Œuvres originales</a></li>
         <li class="list-inline-item"><a href="actu.html">Actu</a></li>
         <li class="list-inline-item"><a href="contact.html">Contact</a></li>
       </ul>
-      <p class="copyright">Copyright 2023 Christine Dusquesne - <a href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
+      <p class="copyright">Copyright 2023 Christine Dusquesne - <a
+          href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
     </footer>
   </div>
-  
-  <script src="asset/js/bootstrap.bundle.min.js"></script>
-  <script src="asset/js/scripts.js"></script>
+
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/scripts.js"></script>
 </body>
+
 </html>
