--- a/actu.html
+++ b/actu.html
@@ -5,17 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Actualiter</title>
-  <link rel="stylesheet" href="asset/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="asset/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <nav>
     <a href="index.html" class="nav-icon" aria-label="visit homepage" aria-current="page">
-      <img src="asset/image/logoN.png" alt="logo">
+      <img src="assets/image/logoN.png" alt="logo">
       <span></span>
     </a>
     <div class="main-navlinks">
@@ -28,13 +28,13 @@
         <a href="index.html">Accueil</a>
         <a href="painting.html">Œuvres originales</a>
         <a href="actu.html">Actu</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html">Contact</a>h1
       </div>
     </div>
   </nav>
   <h1>Exposition</h1>
 	<div class="container center">
-		<embed src="asset/pdf/FLYER EXPO BOCAGE.pdf" width="450px" height="680px">
+		<embed src="assets/pdf/FLYER EXPO BOCAGE.pdf" width="450px" height="680px">
 	</div>
 
   <div class="footer-basic">
@@ -50,7 +50,7 @@
     </footer>
   </div>
   
-  <script src="asset/js/bootstrap.bundle.min.js"></script>
-  <script src="asset/js/scripts.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/scripts.js"></script>
 </body>
 </html>
