--- a/painting.html
+++ b/painting.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </nav>
-  <h1>Œuvres originales</h1>
+  <h1>Tableaux originaux</h1>
   <div class="container">
     <div class="card" style="width: 18rem;">
       <img src="assets/image/Arturo.jpg" class="card-img-top" alt="...">
