--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </nav>
   <h1>Christine Duquesne - Artiste Peintre Semi-Abstrait</h1>
-  <h2>Sublimez votre intérieure avec mes tableaux</h2>
+  <h2>Sublimer votre intérieur avec mes tableaux</h2>
   <section class="paint">
   </section>
   <h2>Bienvenue</h2>
