--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         <div class="card-contact">
           <i class="fa-brands fa-instagram"></i>
           <h6>INSTAGRAM</h6>
-          <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">DUQUESNE-ARTISTE-PEINTRE</a>
+          <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y=" class="contact">DUQUESNE_CHRISTINE_PEINTRE</a>
         </div>
       </div>
       <div class="formulaire">
