--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       </div>
     </div>
   </nav>
-  <h1>Christine Duquesne - Artiste Peintre Semi-Abstrait</h1>
-  <h2>Sublimer votre intérieur avec mes tableaux</h2>
+  <h1>Christine DUQUESNE <br> Artiste Peintre Contemporain</h1>
+  <h2>Sublimez votre intérieur avec ces tableaux</h2>
   <section class="paint">
   </section>
   <h2>Bienvenue</h2>
@@ -85,25 +85,28 @@
     </div>
   </div>
   <section>
-    <h3>Découvrez notre collection</h3>
+    <h2>Découvrez notre collection</h2>
     <div class="container">
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/time.jpg" class="acceuil-img" alt="...">
+        <img src="assets/image/time.jpg" class="acceuil-img" alt="Un palais de verre. Une aile de verre. L’architecture.">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Baby guitare.jpg" class="acceuil-img" alt="...">
+        <img src="assets/image/Baby guitare.jpg" class="acceuil-img" alt="Une ville assaillie par des météorites colorées. 
+        Les arbres regardent ce monde exploser.">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Ouvrir l'oeil.jpg" class="acceuil-img" alt="...">
+        <img src="assets/image/Ouvrir l'oeil.jpg" class="acceuil-img" alt="Une rivière au premier plan, puis des dinosaures
+        qui se dirigent vers les montagnes.">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Non mais dites!.jpg" class="acceuil-img" alt="...">
+        <img src="assets/image/Non mais dites!.jpg" class="acceuil-img" alt="Méditez. Avec ou sans malice. Vous pourriez déceler quelques 
+        suggestions sexuelles sur cet homme rouge et longiforme adossé à un tronc d’arbre rouge.">
       </div>
     </div>
   </section>
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a
+      <div class="social"><a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="><i class="icon ion-social-instagram"></i></a><a
           href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
