--- a/actu.html
+++ b/actu.html
@@ -28,7 +28,7 @@
         <a href="index.html">Accueil</a>
         <a href="painting.html">Œuvres originales</a>
         <a href="actu.html">Actu</a>
-        <a href="contact.html">Contact</a>h1
+        <a href="contact.html">Contact</a>
       </div>
     </div>
   </nav>
