--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,29 @@
   </nav>
 
   <div class="container1">
-    <h1>Vous êtes intéressé par un tableau ?<br>Contactez-moi</h1>
+    <h1>Vous êtes intéressé par un tableau ?</h1>
     <div class="container">
       <div class="container">
+        <ol>
+          <li>
+            <i class="fas fa-envelope"></i>
+            <a href="mailto:duquesne.peintre@gmail.com" class="contact">duquesne.peintre@gmail.com</a>
+          </li>
+          <li>
+            <i class="fa-solid fa-mobile-screen-button"></i>
+            <a href="tel:+33610488231" class="contact">+336 10 48 82 31</a>
+          </li>
+          <li>
+            <i class="fa-brands fa-facebook"></i>
+            <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">DUQUESNE-ARTISTE-PEINTRE</a>
+          </li>
+          <li>
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="
+              class="contact">DUQUESNE_CHRISTINE_PEINTRE</a>
+          </li>
+        </ol>
+        <!--
         <div class="card-contact">
           <i class="fas fa-envelope"></i>
           <h6>E-MAIL</h6>
@@ -57,11 +77,13 @@
         <div class="card-contact">
           <i class="fa-brands fa-instagram"></i>
           <h6>INSTAGRAM</h6>
-          <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y=" class="contact">DUQUESNE_CHRISTINE_<br>PEINTRE</a>
+          <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="
+            class="contact">DUQUESNE_CHRISTINE_<br>PEINTRE</a>
         </div>
+      -->
       </div>
       <div class="formulaire">
-        <form action="https://formsubmit.co/mehdislr@hotmail.fr" method="POST">
+        <form action="https://formsubmit.co/duquesne.peintre@gmail.com" method="POST">
           <input type="hidden" name="_subject" value="Nouveau mail!">
           <label for="name">NOM:</label>
           <input type="text" name="name" id="name" required>
@@ -79,8 +101,9 @@
   </div>
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a
-          href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
+      <div class="social"><a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="><i
+            class="icon ion-social-instagram"></i></a><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i
+            class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
         <li class="list-inline-item"><a href="painting.html">Œuvres originales</a></li>
