--- a/painting.html
+++ b/painting.html
@@ -260,7 +260,7 @@
 
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a
+      <div class="social"><a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="><i class="icon ion-social-instagram"></i></a><a
           href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
