--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     <h1>Vous êtes intéressé par un tableau ?</h1>
     <div class="container">
       <div class="container">
-        <ol>
+        <ul>
           <li>
             <i class="fas fa-envelope"></i>
             <a href="mailto:duquesne.peintre@gmail.com" class="contact">duquesne.peintre@gmail.com</a>
@@ -50,14 +50,14 @@
           </li>
           <li>
             <i class="fa-brands fa-facebook"></i>
-            <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">DUQUESNE-ARTISTE-PEINTRE</a>
+            <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">Duquesne Christine artiste peintre</a>
           </li>
           <li>
             <i class="fa-brands fa-instagram"></i>
             <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="
-              class="contact">DUQUESNE_CHRISTINE_PEINTRE</a>
+              class="contact">duquesne christine peintre</a>
           </li>
-        </ol>
+        </ul>
         <!--
         <div class="card-contact">
           <i class="fas fa-envelope"></i>
