--- a/painting.html
+++ b/painting.html
@@ -268,7 +268,7 @@
         <li class="list-inline-item"><a href="actu.html">Actu</a></li>
         <li class="list-inline-item"><a href="contact.html">Contact</a></li>
       </ul>
-      <p class="copyright">Copyright 2023 Christine Dusquesne - <a
+      <p class="copyright">Copyright 2023 Christine Duquesne - <a
           href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
     </footer>
   </div>
