--- a/index.html
+++ b/index.html
@@ -41,14 +41,19 @@
     </div>
   </nav>
   <h1>Christine DUQUESNE <br> Artiste Peintre Contemporain</h1>
-  <h2>Sublimez votre intérieur avec ces tableaux</h2>
+  <h2>Des tableaux qui personnalisent votre intérieur</h2>
+  <div class="about"><p>Bienvenue ! 
+    Des œuvres résolument modernes n’attendent que vous.
+    Offrez-vous une nouvelle décoration grâce à une pièce unique qui vous ressemble.
+    </p>
+  </div>
   <section class="paint">
   </section>
   <h2>Bienvenue</h2>
   <div class="container">
     <section class="about">
       <div class="main">
-        <img src="../assets/image/profile C-D.jpg">
+        <img src="../assets/image/profile C-D.jpg" alt="Voici une photo de l'artiste peintre christine Duquesne.">
         <div class="about-text">
           <p>Christine DUQUESNE est artiste peintre autodidacte.<br>
             À travers sa peinture transparait ses thèmes de prédilection tels que la NATURE,
@@ -88,15 +93,14 @@
     <h2>Découvrez notre collection</h2>
     <div class="container">
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/time.jpg" class="acceuil-img" alt="Un palais de verre. Une aile de verre. L’architecture.">
+        <img src="assets/image/time.jpg" class="acceuil-img" alt="Une famille observe le temps qui passe symbolisé encore par les 4 saisons au premier plan. 
+        Une grande horloge. Un chemin qui amène vers les grands Sages.">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Baby guitare.jpg" class="acceuil-img" alt="Une ville assaillie par des météorites colorées. 
-        Les arbres regardent ce monde exploser.">
+        <img src="assets/image/Baby guitare.jpg" class="acceuil-img" alt="une belle petite guitare">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
-        <img src="assets/image/Ouvrir l'oeil.jpg" class="acceuil-img" alt="Une rivière au premier plan, puis des dinosaures
-        qui se dirigent vers les montagnes.">
+        <img src="assets/image/Ouvrir l'oeil.jpg" class="acceuil-img" alt="Un œil géant dans lequel se reflète une civilisation perdue. L’univers observe.">
       </div>
       <div class="card-acceuil" style="width: 18rem;">
         <img src="assets/image/Non mais dites!.jpg" class="acceuil-img" alt="Méditez. Avec ou sans malice. Vous pourriez déceler quelques 
