--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="navlinks-container">
         <a href="index.html">Accueil</a>
         <a href="painting.html">Œuvres originales</a>
-        <a href="actu.html">Actu</a>
+        <a href="tempates/actu.html.twig">Actu</a>
         <a href="contact.html">Contact</a>
       </div>
     </div>
