--- a/painting.html
+++ b/painting.html
@@ -28,9 +28,9 @@
       </button>
       <div class="navlinks-container">
         <a href="index.html">Accueil</a>
-        <a href="tempates/painting.html">Œuvres originales</a>
-        <a href="tempates/actu.html">Actu</a>
-        <a href="tempates/contact.html">Contact</a>
+        <a href="painting.html">Œuvres originales</a>
+        <a href="actu.html">Actu</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
   </nav>
@@ -280,9 +280,9 @@
           href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
-        <li class="list-inline-item"><a href="tempates/painting.html">Œuvres originales</a></li>
-        <li class="list-inline-item"><a href="tempates/actu.html">Actu</a></li>
-        <li class="list-inline-item"><a href="tempates/contact.html">Contact</a></li>
+        <li class="list-inline-item"><a href="painting.html">Œuvres originales</a></li>
+        <li class="list-inline-item"><a href="actu.html">Actu</a></li>
+        <li class="list-inline-item"><a href="contact.html">Contact</a></li>
       </ul>
       <p class="copyright">Copyright 2023 Christine Duquesne - <a
           href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
